tests/fixtures/invalid/pow_str_none.py
# Cannot call pow() with Str, None
x = pow("hello", None)
